--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-size: 62.5%;
-    color: #f1f1f1;
+    
 }
 
 body {
@@ -12,6 +12,7 @@ body {
 h1 {
     font-size: 5rem;
     margin: 150px 0 50px;
+    color: #0e0e0e;
 }
 
 h1, button, section {
@@ -25,6 +26,7 @@ div {
 
 button {
     background-color: #0e0e0e;
+    color: #f1f1f1;
     border: 0px;
     padding: 20px;
     font-size: 1.8rem;
